--- a/style.css
+++ b/style.css
@@ -13,20 +13,24 @@ body {
 /* Centrado de los elementos en la cabecera */
 header {
     display: flex;
-    justify-content: center; /* Centra todo el contenido */
+    justify-content: space-between; /* Centra todo el contenido */
     align-items: center;
-    flex-direction: row; /* Asegura que el logo y el texto estén en una fila */
-    padding: 20px 0; /* Relleno superior e inferior */
+    flex-direction: column; /* Alineación vertical */
+    padding: 20px 50px; /* Relleno superior e inferior */
     text-align: center; /* Asegura que el texto se centre */
 }
 
-.header-logo {
-    width: 50px; /* Ajusta el tamaño del logo */
+.logo img {
+    width: 100px; /* Ajusta el tamaño de los logos */
     height: auto;
-    margin-right: 20px; /* Espacio entre el logo y el texto */
+    cursor: pointer; /* Indica que los logos son clickeables */
+
+/* Estilos para el texto central */
+.header-title {
+    text-align: center;
+    flex-grow: 1; /* Asegura que el texto ocupe el espacio entre los logos */
 }
 
-/* Estilos para el título principal */
 .header-title h1, .header-title h2, .header-title p {
     margin: 5px 0; /* Márgenes pequeños entre cada fila */
 }
@@ -92,9 +96,4 @@ header {
     100% {
         transform: translateX(-100%);
     }
-}
-/* Estilo de los enlaces */
-.scroll-wrapper a {
-    display: block; /* Hace que los enlaces se comporten como bloques */
-    text-decoration: none; /* Elimina el subrayado en los enlaces */
 }
