--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ header {
     }
 
 nav {
-      margin-top: 30px; /* ← Puedes ajustar el valor */
+      margin-top: 10px; /* ← Puedes ajustar el valor */
       background-color: #1b1b1b;
       overflow-x: auto;
       white-space: nowrap;
@@ -120,7 +120,7 @@ nav {
       display: inline-block;
       color: #ccc;
       text-decoration: none;
-      padding: 12px 18px;
+      padding: 10px 18px;   /* ← Ajusta para cambiar el tamaño del boton del menu */
       font-size: 15px;
       transition: all 0.3s ease;
       margin: 0 5px;
