--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #000; /* Fondo negro */
+    background-color: #111; /* Fondo gris oscuro casi negro */
     color: #fff; /* Color de texto blanco */
 }
 
