--- a/style.css
+++ b/style.css
@@ -200,14 +200,12 @@ nav {
     }
 
     .left-column {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr); /* 6 columnas iguales */
-    gap: 10px 15px; /* espacio entre filas y columnas */
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+      flex: 1 1 auto;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px 15px;
+      align-content: flex-start;
+    }
 
  .movie-card img {
       width: 100%;  /* Asegura que la imagen ocupe todo el ancho disponible */
@@ -220,15 +218,14 @@ nav {
     }
 
     .movie-card {
-    width: 100%; /* ocupa toda la celda del grid */
-    box-sizing: border-box;
-    position: relative;
-    text-align: center;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+      width: 160px;
+      position: relative;
+      text-align: center;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
 .right-column {
       flex: 0 0 320px;
