--- a/style.css
+++ b/style.css
@@ -175,6 +175,21 @@ nav {
 
 
 
+.categoria-titulo {
+  width: 100%;
+  text-align: left;
+  font-size: 22px;
+  font-weight: bold;
+  color: #00cfff;
+  margin-bottom: 15px;
+  padding: 10px 15px;
+  background-color: rgba(0, 191, 255, 0.08); /* Celeste muy suave y translúcido */
+  border-left: 4px solid #00cfff;
+  border-radius: 4px;
+}
+
+
+
 .btn-estandar {
     font-family: Arial;
     font-size: 18px;
@@ -382,3 +397,48 @@ text-align: center;
       }
     }
  
+.sidebar-genre {
+  margin-top: 0px;
+  padding: 10px;
+  background: #1f1f1f;
+  border-radius: 6px;
+}
+
+.sidebar-title {
+  margin-bottom: 4px;
+  font-size: 1.2em;
+  font-weight: 600;
+  color: #fff;
+  border-bottom: 1px solid #444;
+  padding-bottom: 10px;
+}
+
+.genre-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1px;
+}
+
+.genre-list li {
+  margin-bottom: 5px;
+}
+
+.genre-list a {
+  display: block;
+  color: #ddd;
+  text-decoration: none;
+  padding: 8px;
+  border-radius: 4px;
+  font-size: 0.95em;
+  transition: background 0.3s, color 0.3s;
+}
+
+.genre-list a:hover {
+  background: #00aaff;
+  color: #fff;
+}
+
+
